Add Analytics page with dynamic graphs and top stats cards

--- a/public/index.html
+++ b/public/index.html
@@ -190,21 +190,48 @@
                                     </form>
 
                                     <ul class="navbar-nav ms-auto align-items-center gap-3">
+
                                         <li class="nav-item">
                                             <a class="nav-link position-relative fw-medium"
                                                 href="../src/book-details.html?id=4">
-                                                New Release<sup class="text-warning fs-3 fw-bolder">.</sup>
+                                                New Release
+                                                <sup class="text-warning fs-3 fw-bolder">.</sup>
                                                 <span class="badge-dot"></span>
                                             </a>
                                         </li>
+
                                         <li class="nav-item">
                                             <a class="nav-link fw-medium" href="#bom">Featured</a>
                                         </li>
+
+                                        <li class="nav-item d-block d-lg-none">
+                                            <a class="nav-link fw-medium" href="../src/about.html">About</a>
+                                        </li>
+
+                                        <li class="nav-item d-block d-lg-none">
+                                            <a class="nav-link fw-medium" href="../src/Books.html">Books</a>
+                                        </li>
+
+                                        <li class="nav-item d-block d-lg-none">
+                                            <a class="nav-link fw-medium" href="../src/book-details.html">Book
+                                                Details</a>
+                                        </li>
+
+                                        <li class="nav-item d-block d-lg-none">
+                                            <a class="nav-link fw-medium" href="../src/Contact.html">Contact</a>
+                                        </li>
+
+                                        <li class="nav-item d-block d-lg-none">
+                                            <a class="nav-link fw-medium" href="../src/Analytics.html">Analytics</a>
+                                        </li>
+
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#"><i
+                                            <a class="nav-link" href="./index.html"><i
                                                     class="fa-solid fa-ellipsis-vertical"></i></a>
                                         </li>
+
                                     </ul>
+
                                 </div>
                             </div>
                         </nav>
@@ -304,7 +331,8 @@
                                 </div>
                             </div>
 
-                            <button onclick="window.location.href = '../src/Books.html'" class="btn btn-success btn-lg mt-4">See The list</button>
+                            <button onclick="window.location.href = '../src/Books.html'"
+                                class="btn btn-success btn-lg mt-4">See The list</button>
                             <br><br>
                             <br><br>
                         </div>
