Add Analytics page with dynamic graphs and top stats cards

--- a/src/Contact.html
+++ b/src/Contact.html
@@ -68,7 +68,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="./index.html"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                       <a class="nav-link" href="../public/index.html"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                     </li>
 
                 </ul>
