--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,12 @@
 
 <body class="bg-light">
     <header>
-        <div class="container-fluid bg-warning bg-opacity-10 min-vw-100 min-vh-100">
+        <div   class="container-fluid     min-vw-100 min-vh-100">
             <div class="rounded overflow-hidden  justify-content-between d-flex gap-2 text-dark">
 
-                <div id="navMy" class="navbar rounded d-none d-lg-block shadow-sm">
+                <div id="navMy"    class="navbar rounded d-none d-lg-block shadow-sm">
                     <div class="d-flex flex-column justify-content-between p-3"
-                        style="width:23vw; min-height:100vh; background:#f9fafb; border-right:1px solid #e5e7eb;">
+                        style="width:23vw; min-height:100vh;  border-right:1px solid #e5e7eb;">
 
                         <div id="NewUserCard" class="text-center mb-4">
                             <img src="./Images/sr.png" class="rounded-circle border shadow-sm mb-2"
@@ -110,7 +110,7 @@
                             <a href="./index.html" class="nav-link text-dark d-flex align-items-center gap-2 px-2 py-1">
                                 <i class="bi bi-gear"></i> Settings
                             </a>
-                            <a href="#" class="nav-link text-danger d-flex align-items-center gap-2 px-2 py-1">
+                            <a href="../src/welcome.html" class="nav-link text-danger d-flex align-items-center gap-2 px-2 py-1">
                                 <i class="bi bi-box-arrow-right"></i> Logout
                             </a>
                         </div>
@@ -163,14 +163,14 @@
 
 
 
-                <div id="main-container" class="main-container rounded w-75 bg-white shadow-sm p-2">
+                <div id="main-container" class="main-container rounded w-75  shadow-sm p-2">
 
                     <div id="content-area" class="p-3 " style="display: none;">
                     </div>
 
 
-                    <div id="hideContent">
-                        <nav class="navbar no-border bg-transparent navbar-expand-lg py-2">
+                    <div   id="hideContent">
+                        <nav class="navbar text-light no-border   navbar-expand-lg py-2">
                             <div class="container-fluid">
                                 <a class="navbar-brand fw-bold fs-4">Books Lib<span class="text-warning">.</span></a>
 
