--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,10 @@
 
 <body class="bg-light">
     <header>
-        <div   class="container-fluid     min-vw-100 min-vh-100">
+        <div class="container-fluid     min-vw-100 min-vh-100">
             <div class="rounded overflow-hidden  justify-content-between d-flex gap-2 text-dark">
 
-                <div id="navMy"    class="navbar rounded d-none d-lg-block shadow-sm">
+                <div id="navMy" class="navbar rounded d-none d-lg-block shadow-sm">
                     <div class="d-flex flex-column justify-content-between p-3"
                         style="width:23vw; min-height:100vh;  border-right:1px solid #e5e7eb;">
 
@@ -110,7 +110,8 @@
                             <a href="./index.html" class="nav-link text-dark d-flex align-items-center gap-2 px-2 py-1">
                                 <i class="bi bi-gear"></i> Settings
                             </a>
-                            <a href="../src/welcome.html" class="nav-link text-danger d-flex align-items-center gap-2 px-2 py-1">
+                            <a href="../src/welcome.html"
+                                class="nav-link text-danger d-flex align-items-center gap-2 px-2 py-1">
                                 <i class="bi bi-box-arrow-right"></i> Logout
                             </a>
                         </div>
@@ -169,7 +170,7 @@
                     </div>
 
 
-                    <div   id="hideContent">
+                    <div id="hideContent">
                         <nav class="navbar text-light no-border   navbar-expand-lg py-2">
                             <div class="container-fluid">
                                 <a class="navbar-brand fw-bold fs-4">Books Lib<span class="text-warning">.</span></a>
@@ -183,8 +184,8 @@
                                     <form class="d-flex mx-auto my-2 my-lg-0 w-50">
                                         <div id="rounded"
                                             class="search-box border d-flex align-items-center w-100 px-3">
-                                            <input class="form-control no-border bg-transparent" type="search"
-                                                placeholder="Search your books" />
+                                            <input id="searchInput" class="form-control no-border bg-transparent"
+                                                type="search" placeholder="Search your books" />
                                             <i class="fa-solid fa-magnifying-glass text-muted"></i>
                                         </div>
                                     </form>
@@ -235,6 +236,10 @@
                                 </div>
                             </div>
                         </nav>
+
+                        <div id="results" class="row mt-4"></div>
+
+                        
                         <div class="container rounded my-5 position-relative">
                             <h5 class="fw-bold text-dark mb-3">Books you read last</h5>
 
@@ -612,6 +617,65 @@
         });
     </script>
 
+    
+    <script>
+        $(document).ready(function () {
+            let booksData = [];
+
+            // Load XML data
+            $.ajax({
+                type: "GET",
+                url: "data.xml",
+                dataType: "xml",
+                success: function (xml) {
+                    $(xml).find("book").each(function () {
+                        booksData.push({
+                            id: $(this).attr("id"),
+                            title: $(this).find("title").text(),
+                            author: $(this).find("author").text(),
+                            type: $(this).find("type").text(),
+                            details: $(this).find("details").text(),
+                            image: $(this).find("image").text()
+                        });
+                    });
+                }
+            });
+
+            $("#searchInput").on("keyup", function () {
+                let query = $(this).val().toLowerCase();
+                let output = "";
+
+                if (query.length > 0) {
+                    let filtered = booksData.filter(book =>
+                        book.title.toLowerCase().includes(query) ||
+                        book.author.toLowerCase().includes(query) ||
+                        book.type.toLowerCase().includes(query)
+                    );
+
+                    if (filtered.length > 0) {
+                        filtered.forEach(book => {
+                            output += `
+                      <div class="col-md-4 mb-3">
+                        <div class="card h-100 shadow-sm">
+                          <img src="${book.image}" class="card-img-top" alt="${book.title}">
+                          <div class="card-body">
+                            <h5 class="card-title">${book.title}</h5>
+                            <p class="card-text"><strong>Author:</strong> ${book.author}</p>
+                            <p class="card-text"><strong>Type:</strong> ${book.type}</p>
+                            <p class="text-muted">${book.details}</p>
+                          </div>
+                        </div>
+                      </div>`;
+                        });
+                    } else {
+                        output = "<p class='text-danger'>No results found</p>";
+                    }
+                }
+
+                $("#results").html(output);
+            });
+        });
+    </script>
 
 
 </body>
