--- a/src/about.html
+++ b/src/about.html
@@ -26,13 +26,15 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarContent">
-                    <form class="d-flex mx-auto my-2 my-lg-0 w-50">
-                        <div id="rounded" class="search-box border d-flex align-items-center w-100 px-3">
-                            <input id="searchInput" class="form-control no-border bg-transparent" type="search"
-                                placeholder="Search your books" />
-                            <i class="fa-solid fa-magnifying-glass text-muted"></i>
-                        </div>
-                    </form>
+                    
+                     <form class="d-flex mx-auto my-2 my-lg-0 w-50">
+                                        <div id="rounded"
+                                            class="search-box border d-flex align-items-center w-100 px-3">
+                                            <input id="searchInput" class="form-control no-border bg-transparent"
+                                                type="search" placeholder="Search your books" />
+                                            <i class="fa-solid fa-magnifying-glass text-muted"></i>
+                                        </div>
+                                    </form>
                     <ul class="navbar-nav ms-auto align-items-center gap-3">
 
                         <li class="nav-item">
@@ -178,11 +180,12 @@
         </div>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
     <script>
         $(document).ready(function () {
             let booksData = [];
 
-            // Load XML data
             $.ajax({
                 type: "GET",
                 url: "data.xml",
